# TensorWave

./: CMakeLists.txt  LICENSE  README.md
src/: Activation.h  Layer.h  Loss.h  Optimizer.h  ShapeOps.h  Tensor.cpp  Tensor.h  TensorOps.h  def.h
test/: data.h  logistic.txt  lstm-large.csv  test-layer.cpp  test-log.cpp  test-lsl.cpp  test-lstm.cpp  test-softmax.cpp  test-tanh.cpp
